--- a/Homework7.ipynb
+++ b/Homework7.ipynb
@@ -504,6 +504,41 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summary output:\n",
+    "\n",
+    "Call:\n",
+    "glm(formula = Correct ~ Length + Log_Freq_HAL + Length * Log_Freq_HAL, \n",
+    "    family = binomial, data = newlexdata)\n",
+    "\n",
+    "Deviance Residuals: \n",
+    "    Min       1Q   Median       3Q      Max  \n",
+    "-3.0494   0.3178   0.4182   0.5208   1.3225  \n",
+    "\n",
+    "Coefficients:\n",
+    "                     Estimate Std. Error z value Pr(>|z|)    \n",
+    "(Intercept)         -0.939996   0.115623  -8.130 4.30e-16 '***'\n",
+    "\n",
+    "Length               0.151266   0.012789  11.828  < 2e-16 '***'\n",
+    "\n",
+    "Log_Freq_HAL         0.394772   0.018762  21.041  < 2e-16 '***'\n",
+    "\n",
+    "Length:Log_Freq_HAL -0.010558   0.002202  -4.795 1.63e-06 '***'\n",
+    "\n",
+    "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+    "\n",
+    "(Dispersion parameter for binomial family taken to be 1)\n",
+    "\n",
+    "    Null deviance: 49809  on 70588  degrees of freedom\n",
+    "Residual deviance: 46563  on 70585  degrees of freedom\n",
+    "AIC: 46571\n",
+    "\n",
+    "Number of Fisher Scoring iterations: 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "9AC8nTnYtzAb"
    },
@@ -695,6 +730,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "         actual\n",
+    "predicted     0     1\n",
+    "        0    13    44\n",
+    "        1  7966 62566\n",
+    "70589\n",
+    "[1] \"Accuracy: 0.886526229299183\"\n",
+    "\n",
+    "Formatting really not working here ^"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "V-D1Kk4Wz6eA"
    },
@@ -792,6 +841,24 @@
    "source": [
     "qda.fit = qda(Correct ~ Length + Log_Freq_HAL + Length:Log_Freq_HAL, data = newlexdata)\n",
     "qda.fit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Call:\n",
+    "qda(Correct ~ Length + Log_Freq_HAL + Length:Log_Freq_HAL, data = newlexdata)\n",
+    "\n",
+    "Prior probabilities of groups:\n",
+    "        0: 0.1130346         1: 0.8869654 \n",
+    "\n",
+    "Group means:\n",
+    "    Length Log_Freq_HAL Length:Log_Freq_HAL\n",
+    "    \n",
+    "0: 8.047124,     4.932123,            37.95260\n",
+    "\n",
+    "1: 7.979971,     6.444849,            49.34219"
    ]
   },
   {
