--- a/Homework6incomplete.ipynb
+++ b/Homework6incomplete.ipynb
@@ -433,6 +433,46 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Call:\n",
+    "lm(formula = D_RT ~ Log_Freq_HAL + Length + Log_Freq_HAL:Length, \n",
+    "    data = lexdata)\n",
+    "\n",
+    "Residuals:\n",
+    "     Min       1Q   Median       3Q      Max \n",
+    "-1118.01  -205.23   -86.95    90.77  3147.07 \n",
+    "\n",
+    "Coefficients:\n",
+    "                    Estimate Std. Error t value Pr(>|t|)    \n",
+    "(Intercept)         610.1903    14.6678  41.601  < 2e-16 ***\n",
+    "\n",
+    "Log_Freq_HAL         -6.0239     1.9678  -3.061  0.00221 ** \n",
+    "\n",
+    "Length               47.7531     1.6368  29.175  < 2e-16 ***\n",
+    "\n",
+    "Log_Freq_HAL:Length  -2.9421     0.2348 -12.528  < 2e-16 ***\n",
+    "\n",
+    "---\n",
+    "Signif. codes:  \n",
+    "0 ‘***’ \n",
+    "0.001 ‘**’ \n",
+    "0.01 ‘*’ \n",
+    "0.05 ‘.’ \n",
+    "0.1 ‘ ’ \n",
+    "\n",
+    "Residual standard error: \n",
+    "\n",
+    "359.1 on 62606 degrees of freedom\n",
+    "\n",
+    "Multiple R-squared:  0.09473,\t\n",
+    "Adjusted R-squared:  0.09469 \n",
+    "F-statistic:  2184 on 3 and 62606 DF,  \n",
+    "p-value: < 2.2e-16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "Pbeg_JrS3mwU"
    },
